--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="header__slogan-title header__slogan-font">Safe Now, <br />Secure Forever</h1>
         <div class="download__container download__container-one--size">
           <a
-            href="./download/Programm/Savety_Spoofing.rar"
+            href="#"
             class="download__link download__link--color download__link--size download__link--border download__link--background link--text-decoration link__hover link__hover--hover"
             >Install</a
           >
@@ -22,7 +22,7 @@
       </section>
       <div class="window-program window-program--size">
         <img
-          src="./image/header/program.jpg"
+          src="./image/header/program.png"
           alt="Savety_Spoofing window image"
           class="window-program__image window-program__image--size"
         />
