Update download links, enhance header styles, and add main CSS file
- Changed download links in index.html to point to the new setup executable.
- Updated contact number in the footer section.
- Enhanced header styles in _header.scss with a new box shadow for images.
- Added main.css file with comprehensive styles including variables, font faces, and responsive design.
- Included main.css.map for better debugging and development experience.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="header__slogan-title header__slogan-font">Safe Now, <br />Secure Forever</h1>
         <div class="download__container download__container-one--size">
           <a
-            href="#"
+            href="./download/Programm/savety-spoofing Setup 1.0.0.exe"
             class="download__link download__link--color download__link--size download__link--border download__link--background link--text-decoration link__hover link__hover--hover"
             >Install</a
           >
@@ -120,7 +120,7 @@
           class="download__container download__container-two--size download__container-two--align"
         >
           <a
-            href="./download/Programm/Savety_Spoofing.rar"
+            href="./download/Programm/savety-spoofing Setup 1.0.0.exe"
             class="download__link download__link--color download__link-slogan--size download__link-two--border download__link-two--background link--text-decoration link__hover link__hover--hover"
             >Install</a
           >
@@ -167,9 +167,9 @@
             <li class="footer__list-title footer__list-title--size">Contact Us</li>
             <li class="footer__list-item">
               <a
-                href="tel:+79999999999"
+                href="tel:+79842780371"
                 class="footer__link link__hover footer__link--hover footer__number-icon footer__icon--size"
-                >+7 999 999 99-99</a
+                >+7 984 278 03-71</a
               >
             </li>
             <li class="footer__list-item">
