--- a/index.html
+++ b/index.html
@@ -5,8 +5,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Savety_Spoofing</title>
     <link rel="stylesheet" href="./css/main.css" />
-    <link rel="icon" href="./image/icon/website/icon.jpg" />
+    <!-- <link rel="icon" href="./image/icon/website/icon.jpg" /> -->
     <script src="script/script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="root" data-root>
+      <header class="header">
+        <div class="header-icon" data-header-icon>
+          <img src="#" alt="icon" class="icon" />
+          <span class="icon-title" data-click-title>BICU</span>
+        </div>
+        <nav class="header-menu" data-header-menu>
+          <ul class="menu-list">
+            <li class="menu-list__item">О нас</li>
+            <li class="menu-list__item">Особенности</li>
+            <li class="menu-list__item">Цены</li>
+            <li class="menu-list__item">Свидетельство</li>
+          </ul>
+        </nav>
+        <div class="register-box" data-register-box>
+          <button class="entrance" type="button" data-btn-entrance>Вход</button>
+          <button class="register" type="button" data-btn-register>Регистрация</button>
+        </div>
+      </header>
+      <section class="intro" data-intro-section>
+        <h1 class="intro-title" data-click-title>Big Is Close Up</h1>
+        <p class="intro-description">Описание</p>
+        <a href="#" class="btn-installation" data-btn-install>Скачать</a>
+        <img src="#" alt="Изображение" class="intro-img" />
+      </section>
+      <ul class="stats-list" data-stats-list>
+        <li class="stats-item">
+          <span class="stats-number" data-status-number>390+</span>
+          <span class="stats-title">Пользователи</span>
+        </li>
+        <li class="stats-item">
+          <span class="stats-number" data-status-adress>20+</span>
+          <span class="stats-title">Адреса</span>
+        </li>
+      </ul>
+      <section class="features" data-features-section>
+        <h2 class="features-title">
+          Мы предоставляем множество функций, которые Вы можете использовать
+        </h2>
+        <p class="features-description">
+          Вы можете с удовольствием изучать функции, которые мы предоставляем, и пользоваться каждой
+          из них.
+        </p>
+        <ul class="features-list">
+          <li class="features-list__item">Мощная онлайн-защита</li>
+          <li class="features-list__item">Интернет без границ</li>
+          <li class="features-list__item">VPN с наддувом</li>
+          <li class="features-list__item">Никаких конкретных временных ограничений</li>
+        </ul>
+      </section>
+      <section class="installation">
+        <h2 class="installation-title">
+          Подпишитесь сейчас, чтобы получить специальные возможности!
+        </h2>
+        <p class="installation-description">
+          Давайте подпишемся вместе с нами и узнаем, что интересного.
+        </p>
+        <a href="#" class="btn-installation" data-btn-install>Скачать</a>
+      </section>
+
+      <footer class="footer">
+        <section class="footer-brand">
+          <h1 class="footer-logo">LaslesVPN</h1>
+          <p class="footer-description">
+            LaslesVPN — это частная виртуальная сеть с уникальными функциями и высоким уровнем
+            безопасности.
+          </p>
+        </section>
+        <div class="footer-nav-grid">
+          <nav class="footer-nav">
+            <h2 class="footer-nav-title">Продукт</h2>
+            <ul class="footer-nav-list">
+              <li><a href="#">Скачать</a></li>
+              <li><a href="#">Цены</a></li>
+              <li><a href="#">Адреса</a></li>
+              <li><a href="#">Сервер</a></li>
+              <li><a href="#">Страны</a></li>
+              <li><a href="#">Блог</a></li>
+            </ul>
+          </nav>
+          <nav class="footer-nav">
+            <h2 class="footer-nav-title">Вовлекать</h2>
+            <ul class="footer-nav-list">
+              <li><a href="#">LaslesVPN ?</a></li>
+              <li><a href="#">Вопросы и ответы</a></li>
+              <li><a href="#">Руководства</a></li>
+              <li><a href="#">О нас</a></li>
+              <li><a href="#">Политика конфиденциальности</a></li>
+              <li><a href="#">Условия обслуживания</a></li>
+            </ul>
+          </nav>
+          <nav class="footer-nav">
+            <h2 class="footer-nav-title">Заработать деньги</h2>
+            <ul class="footer-nav-list">
+              <li><a href="#">Аффилиат</a></li>
+              <li><a href="#">Стать Партнером</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer-copyright">
+          <p data-copyright-text>©2025 - LaslesVPN</p>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
